TAB-2: Use URI rather than URL. Rename property accordingly.